fix: set width to 100% for about section on small screens

--- a/styles.css
+++ b/styles.css
@@ -631,6 +631,7 @@ body{
 @media (max-width:500px) {
     .about{
         flex-direction: column;
+        width: 100%;
     }
     .about>h1{
         font-size: 50px;
